# BIUcontrol-pulse

./: .gitignore  BIU_gui_callback_functions.py  BIU_gui_helper_functions.py  BIU_gui_helper_functions_BACKUP_1010.py  BIU_gui_helper_functions_BASE_1010.py  BIU_gui_helper_functions_LOCAL_1010.py  BIUapplyandplunge.py  BIUclean.py  BIUgui.py  BIUpinlist.py  BIUpowerupdown.py  README.md  README.rst  SensorTest.py  TODO.md  gpio-test-gui.py  neotrellis_enable.py  pyproject.toml  sensor-test-gui.py  spray_pulse.py
doc/: coverpage.rst  gui.rst  index.rst  neotrellis.rst
spray-records/: spray-record-2025-08-27.txt
src/: BIU_gui_helper_functions.py  BIUclean.py  SensorTest.py
