[project]
name = "BIUcontrol-pulse"
dynamic = ["version"]
description = "Python software and firmware for the Back-It-Up device"
authors = [
	{name= "Yong Zi Tan"},
	{name= "John Rubinstein"},
	{name = "Liam Twomey"},
]
maintainers = [
	{name="Liam Twomey"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ['cryo-em','grid-freezing','raspberry-pi','robotics']
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt","test/eprfiles/LICENSE.md"]
classifiers = [
	"Private :: Do Not Upload",
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	'numpy',
	'RPi.GPIO',
	'guizero',
	'subprocess',
	'time',
	'argparse',
	'pathlib',
	'datetime',
	'busio',
	'board',
	'time',
	'threading',
	'adafruit-neotrellis',
]

[project.optional-dependencies]
dummy=[
	GPIO
]

[project.urls]
Repository = "https://github.com/LiamTwomey/BIUcontrol-pulse"
Issues = "https://github.com/Liam-Twomey/BIUcontrol-pulse/issues"
Homepage = "https://github.com/LiamTwomey/BIUcontrol-pulse"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
eprsim = "src"

[tool.setuptools.dynamic]
version = {attr = "eprsim.__version__"}

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
